# cvdesign

./: .gitignore  README.md
CannyEdgeDesign/: CMakeLists.txt
CannyEdgeDesign/src/: CannyEdgeDetector.cpp  LoGEdgeDetector.cpp
FaceRecognition/: CMakeLists.txt  default_config.yaml  evalEigenfaces.cpp  faceRecognition.cpp  opencvFaceRecognition.cpp  trainEigenfaces.cpp
FaceRecognition/eigenfaces_models/: eigenfaces.yaml
FaceRecognition/faces_database/: dataset.csv  dataset.yaml
FaceRecognition/utils/: create_database_csv.py
HandGestureRecognition/: controlSecondV.py  hand.py  handCNN.py  playCode.py  playSkateHooligans.py  playv2.py  roi_based.py  test.py
HandGestureRecognition/models/: all_five.pbtxt
cannyEdgeDesign/: CMakeLists.txt
cannyEdgeDesign/src/: cannyEdgeDetector.cpp
handGestureRecognition/: hand.py
